# sdlc-agent

./: .gitignore  README.md  pyproject.toml
config/: jira-field-map.json
fixtures/confluence/: demo-prd.json
fixtures/knowledge/: ac-playbook.md  adr-argon2id.md  adr-mfa-rollout.md  architecture-auth.md  offline-pack.json  story-template.md
fixtures/policy/: demo.json  offline.snapshot.json
prompt/: rubric.md
src/reqs_agent_demo/: __init__.py  __main__.py  cli.py  paths.py  pipeline_runner.py  policy_models.py
src/reqs_agent_demo/agent/: __init__.py  graph.py  heuristic.py  state.py
src/reqs_agent_demo/connectors/: confluence.py  factories.py  jira.py  knowledge.py  policy_client.py
src/reqs_agent_demo/mocks/: server.py
src/reqs_agent_demo/util/: html.py
