[project]
name = "reqs-agent-demo"
version = "0.1.0"
description = "Requirements generation LangGraph demo (Confluence PRD → Jira stories)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.45",
    "lxml>=5.2.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "python-frontmatter>=1.1.0",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
mock-dev = "reqs_agent_demo.mocks.server:main"
demo = "reqs_agent_demo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/reqs_agent_demo", "fixtures", "config", "prompt", "README.md"]

[tool.ruff]
line-length = 100

[tool.pyright]
extraPaths = ["src"]
